tests/resources/invalid/type/control_flow/if_boolean.mamba
if 10 then print "hello world"